Updated on 18-03-2025 using Colab

--- a/Omar_Al_Gilani_RVC_Model.ipynb
+++ b/Omar_Al_Gilani_RVC_Model.ipynb
@@ -55,7 +55,7 @@
         "---\n",
         "آخر تحديث :\n",
         "\n",
-        "16 - 3 - 2025\n",
+        "18 - 3 - 2025\n",
         "\n",
         "---"
       ],
@@ -178,25 +178,44 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "\n",
         "#@title  **تثبيت ملحقات إضافية بعد التحديث** (تستغرق 6 دقائق)\n",
         "\n",
         "#@markdown * **هذه الخطوة مهمة جدا جدا**\n",
+        "\n",
         "#@markdown * **في نهاية هذه الخطوة ستظهر لك رسالة Restart runtime**\n",
+        "\n",
         "#@markdown * **إضغط Cancel عندما تظهر لك**\n",
+        "\n",
+        "\n",
+        "!pip uninstall -y numpy tensorflow fairseq\n",
+        "\n",
+        "!pip install numpy==1.23.5\n",
+        "\n",
+        "!pip install tensorflow==2.12.0\n",
         "\n",
         "!pip install git+https://github.com/One-sixth/fairseq.git\n",
         "\n",
+        "\n",
         "import tensorflow as tf\n",
+        "\n",
         "print(\"Num GPUs Available:\", len(tf.config.experimental.list_physical_devices('GPU')))\n",
         "\n",
-        "!pip uninstall tensorflow -y\n",
-        "!pip install tensorflow==2.12.0\n",
+        "\n",
+        "# إصلاح مشكلة التحميل في fairseq\n",
         "\n",
         "!sed -i 's/torch.load(f, map_location=torch.device(\"cpu\"))/torch.load(f, map_location=torch.device(\"cpu\"), weights_only=False)/g' /usr/local/lib/python3.11/dist-packages/fairseq/checkpoint_utils.py\n",
         "\n",
-        "from IPython.display import clear_output\n",
+        "\n",
+        "from IPython.display import clear_output, display\n",
+        "\n",
+        "from ipywidgets import Button\n",
+        "\n",
+        "\n",
         "clear_output()\n",
-        "Button(description=\"\\u2714 Success\", button_style=\"success\")"
+        "\n",
+        "display(Button(description=\"\\u2714 Success\", button_style=\"success\"))"
       ],
       "metadata": {
         "cellView": "form",
@@ -708,13 +727,16 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "#@title **استحضار مودل من جوجل درايف**\n",
         "\n",
         "\n",
         "!pip install --upgrade --no-cache-dir gdown\n",
         "import tarfile\n",
+        "# Importing the os module\n",
+        "import os\n",
         "\n",
-        "Model_Name = \"\"#@param {type:\"string\"}\n",
+        "Model_Name = \"omarw\"#@param {type:\"string\"}\n",
         "\n",
         "#@markdown * **الصق هنا رابط ملف المودل من جوجل درايف**\n",
         "\n",
@@ -722,7 +744,7 @@
         "\n",
         "model_pth_name = Model_Name + \".tar.gz\"\n",
         "\n",
-        "MODEL_LINK = \"\" #@param {type:\"string\"}\n",
+        "MODEL_LINK = \"https://drive.google.com/file/d/1-0fvSVxrM5CePadAzEHNk3FnT73stA6P/view?usp=drivesdk\" #@param {type:\"string\"}\n",
         "\n",
         "if MODEL_LINK != \"\":\n",
         "  pth = '/content/sample_data/'\n",
@@ -871,7 +893,7 @@
         "%cd /content/RVC\n",
         "\n",
         "#@markdown  * **اكتب هنا اسم المودل المراد استخدامه, تجنب أي أخطاء إملائية**\n",
-        "model_name = ''#@param {type:\"string\"}\n",
+        "model_name = 'omarw'#@param {type:\"string\"}\n",
         "\n",
         "model_filename = model_name + '.pth'\n",
         "\n",
@@ -949,7 +971,7 @@
         "\n",
         "#@markdown * **من رجل إلي امرأة : 12**\n",
         "\n",
-        "pitch = 0 # @param {type:\"slider\", min:-12, max:12, step:1}\n",
+        "pitch = 12 # @param {type:\"slider\", min:-12, max:12, step:1}\n",
         "\n",
         "#input_path = \"/content/sample_data/input_audio.wav\"#@param {type:\"string\"}\n",
         "input_path = \"/content/sample_data/input_audio.wav\"\n",
