Omar Al-Gilani voice model update - 18.3.2025

--- a/Omar_Al_Gilani_RVC_Model.ipynb
+++ b/Omar_Al_Gilani_RVC_Model.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ameearomar/Omar-AlGilani/blob/main/Omar_Al_Gilani_RVC_Model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -736,7 +747,7 @@
         "# Importing the os module\n",
         "import os\n",
         "\n",
-        "Model_Name = \"omarw\"#@param {type:\"string\"}\n",
+        "Model_Name = \"\"#@param {type:\"string\"}\n",
         "\n",
         "#@markdown * **الصق هنا رابط ملف المودل من جوجل درايف**\n",
         "\n",
@@ -744,7 +755,7 @@
         "\n",
         "model_pth_name = Model_Name + \".tar.gz\"\n",
         "\n",
-        "MODEL_LINK = \"https://drive.google.com/file/d/1-0fvSVxrM5CePadAzEHNk3FnT73stA6P/view?usp=drivesdk\" #@param {type:\"string\"}\n",
+        "MODEL_LINK = \"Omar-AlGilani\" #@param {type:\"string\"}\n",
         "\n",
         "if MODEL_LINK != \"\":\n",
         "  pth = '/content/sample_data/'\n",
@@ -893,7 +904,7 @@
         "%cd /content/RVC\n",
         "\n",
         "#@markdown  * **اكتب هنا اسم المودل المراد استخدامه, تجنب أي أخطاء إملائية**\n",
-        "model_name = 'omarw'#@param {type:\"string\"}\n",
+        "model_name = ''#@param {type:\"string\"}\n",
         "\n",
         "model_filename = model_name + '.pth'\n",
         "\n",
@@ -971,7 +982,7 @@
         "\n",
         "#@markdown * **من رجل إلي امرأة : 12**\n",
         "\n",
-        "pitch = 12 # @param {type:\"slider\", min:-12, max:12, step:1}\n",
+        "pitch = 7 # @param {type:\"slider\", min:-12, max:12, step:1}\n",
         "\n",
         "#input_path = \"/content/sample_data/input_audio.wav\"#@param {type:\"string\"}\n",
         "input_path = \"/content/sample_data/input_audio.wav\"\n",
@@ -989,7 +1000,7 @@
         "\n",
         "model_name = os.path.basename(model_path)\n",
         "os.environ['weight_root'] = os.path.dirname(model_path)\n",
-        "index_rate = 0.5 # @param {type:\"slider\", min:0, max:1, step:0.01}\n",
+        "index_rate = 0.79 # @param {type:\"slider\", min:0, max:1, step:0.01}\n",
         "volume_normalization = 0 #param {type:\"slider\", min:0, max:1, step:0.01}\n",
         "consonant_protection = 0.5 #param {type:\"slider\", min:0, max:1, step:0.01}\n",
         "\n",
