Omar Al-Gilani voice model update - 18.3.2025

--- a/Omar_Al_Gilani_RVC_Model.ipynb
+++ b/Omar_Al_Gilani_RVC_Model.ipynb
@@ -747,7 +747,7 @@
         "# Importing the os module\n",
         "import os\n",
         "\n",
-        "Model_Name = \"\"#@param {type:\"string\"}\n",
+        "Model_Name = \"sear\"#@param {type:\"string\"}\n",
         "\n",
         "#@markdown * **الصق هنا رابط ملف المودل من جوجل درايف**\n",
         "\n",
@@ -755,7 +755,7 @@
         "\n",
         "model_pth_name = Model_Name + \".tar.gz\"\n",
         "\n",
-        "MODEL_LINK = \"Omar-AlGilani\" #@param {type:\"string\"}\n",
+        "MODEL_LINK = \"https://drive.google.com/file/d/1-24rb1hnHlfUlkM9pkDJpkVMvw7Y7SSU/view?usp=drive_link\" #@param {type:\"string\"}\n",
         "\n",
         "if MODEL_LINK != \"\":\n",
         "  pth = '/content/sample_data/'\n",
@@ -982,7 +982,7 @@
         "\n",
         "#@markdown * **من رجل إلي امرأة : 12**\n",
         "\n",
-        "pitch = 7 # @param {type:\"slider\", min:-12, max:12, step:1}\n",
+        "pitch = 12 # @param {type:\"slider\", min:-12, max:12, step:1}\n",
         "\n",
         "#input_path = \"/content/sample_data/input_audio.wav\"#@param {type:\"string\"}\n",
         "input_path = \"/content/sample_data/input_audio.wav\"\n",
@@ -1000,7 +1000,7 @@
         "\n",
         "model_name = os.path.basename(model_path)\n",
         "os.environ['weight_root'] = os.path.dirname(model_path)\n",
-        "index_rate = 0.79 # @param {type:\"slider\", min:0, max:1, step:0.01}\n",
+        "index_rate = 0.5 # @param {type:\"slider\", min:0, max:1, step:0.01}\n",
         "volume_normalization = 0 #param {type:\"slider\", min:0, max:1, step:0.01}\n",
         "consonant_protection = 0.5 #param {type:\"slider\", min:0, max:1, step:0.01}\n",
         "\n",
