Omar Al-Gilani voice model update - 18.3.2025

--- a/Omar_Al_Gilani_RVC_Model.ipynb
+++ b/Omar_Al_Gilani_RVC_Model.ipynb
@@ -31,17 +31,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<p style=\"direction: rtl; text-align: center;\">\n",
-        "    <b><span style=\"font-size: medium;\">🔥 الزعامة عمر الجيلاني&nbsp;</span></b>\n",
-        "    <b><span style=\"font-size: medium;\">👇👍💪</span></b>\n",
-        "</p>\n",
-        "<div class=\"separator\" style=\"clear: both; text-align: center;\">\n",
-        "    <a href=\"https://drive.google.com/file/d/1f8DKZ035FqmTEGl8RjLzy0cs7nDsJv0p/view?usp=drivesdk\"\n",
-        "       style=\"margin-left: 1em; margin-right: 1em;\" target=\"_blank\">\n",
-        "        <img border=\"0\" src=\"https://drive.google.com/uc?id=1f8DKZ035FqmTEGl8RjLzy0cs7nDsJv0p\"\n",
-        "             width=\"200\" height=\"200\" />\n",
-        "    </a>\n",
-        "</div>"
+        "\n",
+        "\n",
+        "<p style=\"direction: rtl; text-align: center;\"> <b><span style=\"font-size: medium;\">🔥 الزعامة عمر الجيلاني&nbsp;</span></b> <b><span style=\"font-size: medium;\">👇👍💪</span></b> </p> <div class=\"separator\" style=\"clear: both; text-align: center;\"> <a href=\"https://drive.google.com/file/d/1f8DKZ035FqmTEGl8RjLzy0cs7nDsJv0p/view?usp=drivesdk\" style=\"margin-left: 1em; margin-right: 1em;\" target=\"_blank\"> <img border=\"0\" src=\"https://drive.google.com/uc?id=1f8DKZ035FqmTEGl8RjLzy0cs7nDsJv0p\" width=\"200\" height=\"200\" /> </a> </div>"
       ],
       "metadata": {
         "id": "WHEbYOk_HJrJ"
@@ -180,57 +172,71 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<p>&nbsp;إذا ظهرت لك هذه الرسالة</p><div class=\"separator\" style=\"clear: both; text-align: center;\"><a imageanchor=\"1\" style=\"margin-left: 1em; margin-right: 1em;\"><img border=\"0\" data-original-height=\"257\" data-original-width=\"528\" src=\"https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgQ03JKlBn7e25COBDqSi1Ak8Ftxxr1xbQ04dPUMqLzIX_nYjsHZitBf8TLji_rTUZYZnSqBHE_i5G195T8N7kl8ik32tq8USlEZ9jvVOzE3jFCKXxx2EYF6rKmM5wLsMLEwTrRU9ms_5FnewU3T3XB7mOl2hsJmxGMrUNRdHAwPNB5LupYg9UnOtZFGHEE/s16000/Screenshot%202024-07-05%20121525.png\" /></a></div>"
+        "<p style=\"text-align: center;\">&nbsp;إذا ظهرت لك هذه الرسالة</p><div class=\"separator\" style=\"clear: both; text-align: center;\"><a style=\"margin-left: 1em; margin-right: 1em;\"><img border=\"0\" data-original-height=\"257\" data-original-width=\"528\" src=\"https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgAgWQmO-Wg18nEXOpmk5ACA467HTTNjcoqQM-GV-nT7z5UdcCpebOqrJ4qhuL-6W58VhQDkPLG4jdV6Z4H5Qm8kk1esNF0h_opWizoU09lySKDIv43cM5h2ERVte2sJOyECUUngP97bp1QXZxzwIrBgDHNTsD1b62sCnVg2v4Ht78txGONQwOMxjDSjQJW/s16000/Screenshot%202024-07-05%20121525.png\" /></a></div><div class=\"separator\" style=\"clear: both; text-align: center;\"><a style=\"margin-left: 1em; margin-right: 1em;\"><br /></a></div><div class=\"separator\" style=\"clear: both; text-align: center;\"><a style=\"margin-left: 1em; margin-right: 1em;\">وانتظر حتي يعود الاتصال</a></div><div class=\"separator\" style=\"clear: both; text-align: center;\"><a style=\"margin-left: 1em; margin-right: 1em;\">ثم استكمل الخطوات بشكل طبيعي</a></div>"
       ],
       "metadata": {
         "id": "ykqaDEWIAd6K"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "---"
+      ],
+      "metadata": {
+        "id": "I0E_gKXOCBD1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "#@title  **تثبيت ملحقات إضافية بعد التحديث** (تستغرق 6 دقائق)\n",
         "\n",
         "#@markdown * **هذه الخطوة مهمة جدا جدا**\n",
         "\n",
-        "#@markdown * **في نهاية هذه الخطوة ستظهر لك رسالة Restart runtime**\n",
-        "\n",
-        "#@markdown * **إضغط Cancel عندما تظهر لك**\n",
-        "\n",
-        "\n",
-        "!pip uninstall -y numpy tensorflow fairseq\n",
-        "\n",
-        "!pip install numpy==1.23.5\n",
-        "\n",
-        "!pip install tensorflow==2.12.0\n",
-        "\n",
         "!pip install git+https://github.com/One-sixth/fairseq.git\n",
         "\n",
+        "!pip uninstall -y numpy\n",
+        "!pip install numpy==1.23.5\n",
         "\n",
-        "import tensorflow as tf\n",
-        "\n",
-        "print(\"Num GPUs Available:\", len(tf.config.experimental.list_physical_devices('GPU')))\n",
-        "\n",
-        "\n",
-        "# إصلاح مشكلة التحميل في fairseq\n",
-        "\n",
-        "!sed -i 's/torch.load(f, map_location=torch.device(\"cpu\"))/torch.load(f, map_location=torch.device(\"cpu\"), weights_only=False)/g' /usr/local/lib/python3.11/dist-packages/fairseq/checkpoint_utils.py\n",
-        "\n",
-        "\n",
-        "from IPython.display import clear_output, display\n",
-        "\n",
-        "from ipywidgets import Button\n",
-        "\n",
-        "\n",
+        "from IPython.display import clear_output\n",
         "clear_output()\n",
-        "\n",
-        "display(Button(description=\"\\u2714 Success\", button_style=\"success\"))"
+        "from ipywidgets import Button\n",
+        "Button(description=\"\\u2714 Success\", button_style=\"success\")"
       ],
       "metadata": {
         "cellView": "form",
         "id": "f-8rNcpFAlB5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title  **خطوة إضافية : تحديث 18 مارس 2025**\n",
+        "\n",
+        "!pip uninstall tensorflow -y\n",
+        "!pip install tensorflow==2.12.0\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "print(\"Num GPUs Available:\", len(tf.config.experimental.list_physical_devices('GPU')))\n",
+        "\n",
+        "!sed -i 's/torch.load(f, map_location=torch.device(\"cpu\"))/torch.load(f, map_location=torch.device(\"cpu\"), weights_only=False)/g' /usr/local/lib/python3.11/dist-packages/fairseq/checkpoint_utils.py\n",
+        "\n",
+        "from IPython.display import clear_output\n",
+        "clear_output()\n",
+        "from ipywidgets import Button\n",
+        "Button(description=\"\\u2714 Success\", button_style=\"success\")\n",
+        "\n",
+        "import numpy as np\n",
+        "import librosa\n",
+        "print(\"NumPy version:\", np.__version__)\n",
+        "print(\"Librosa version:\", librosa.__version__)"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "xmhzfAo_JK04"
       },
       "execution_count": null,
       "outputs": []
@@ -313,6 +319,7 @@
         "import os\n",
         "from pytube import YouTube\n",
         "from IPython.display import clear_output\n",
+        "from ipywidgets import Button\n",
         "\n",
         "def calculate_audio_duration(file_path):\n",
         "    duration_seconds = len(AudioSegment.from_file(file_path)) / 1000.0\n",
@@ -738,16 +745,13 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "#@title **استحضار مودل من جوجل درايف**\n",
         "\n",
         "\n",
         "!pip install --upgrade --no-cache-dir gdown\n",
         "import tarfile\n",
-        "# Importing the os module\n",
-        "import os\n",
         "\n",
-        "Model_Name = \"sear\"#@param {type:\"string\"}\n",
+        "Model_Name = \"\"#@param {type:\"string\"}\n",
         "\n",
         "#@markdown * **الصق هنا رابط ملف المودل من جوجل درايف**\n",
         "\n",
@@ -755,7 +759,7 @@
         "\n",
         "model_pth_name = Model_Name + \".tar.gz\"\n",
         "\n",
-        "MODEL_LINK = \"https://drive.google.com/file/d/1-24rb1hnHlfUlkM9pkDJpkVMvw7Y7SSU/view?usp=drive_link\" #@param {type:\"string\"}\n",
+        "MODEL_LINK = \"\" #@param {type:\"string\"}\n",
         "\n",
         "if MODEL_LINK != \"\":\n",
         "  pth = '/content/sample_data/'\n",
