--- a/Omar_Al_Gilani_RVC_Model.ipynb
+++ b/Omar_Al_Gilani_RVC_Model.ipynb
@@ -66,7 +66,7 @@
         "---\n",
         "آخر تحديث :\n",
         "\n",
-        "18 - 3 - 2025\n",
+        "19 - 3 - 2025\n",
         "\n",
         "---"
       ],
@@ -313,6 +313,7 @@
         "import os\n",
         "from pytube import YouTube\n",
         "from IPython.display import clear_output\n",
+        "from ipywidgets import Button\n",
         "\n",
         "def calculate_audio_duration(file_path):\n",
         "    duration_seconds = len(AudioSegment.from_file(file_path)) / 1000.0\n",
@@ -334,7 +335,7 @@
         "\n",
         "#@markdown * **يجب أن يكون اسم المودل متطابق مع الخطوات القادمة وإلا ستظهر أخطاء**\n",
         "\n",
-        "model_name = '' #@param {type:\"string\"}\n",
+        "model_name = 'omar_voice' #@param {type:\"string\"}\n",
         "#dataset_folder = '/content/dataset' #@param {type:\"string\"}\n",
         "dataset_folder = '/content/dataset'\n",
         "\n",
