Omar Al-Gilani voice model update - 30.3.2025

--- a/Omar_Al_Gilani_RVC_Model.ipynb
+++ b/Omar_Al_Gilani_RVC_Model.ipynb
@@ -66,7 +66,7 @@
         "---\n",
         "آخر تحديث :\n",
         "\n",
-        "19 - 3 - 2025\n",
+        "30 - 3 - 2025\n",
         "\n",
         "---"
       ],
@@ -997,7 +997,7 @@
         "\n",
         "f0_method = \"rmvpe\" # @param [\"rmvpe\", \"pm\", \"harvest\"]\n",
         "\n",
-        "save_as = \"/content/RVC/audios/output_audio.wav\"#@param {type:\"string\"}\n",
+        "save_as = \"\"#@param {type:\"string\"}\n",
         "\n",
         "model_name = os.path.basename(model_path)\n",
         "os.environ['weight_root'] = os.path.dirname(model_path)\n",
